force-app/main/default/objects/PS_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <description>Type of the PS Task</description>
    <inlineHelpText>Type of the PS Task</inlineHelpText>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
            <value>
                <fullName>Consult-Onsite</fullName>
            </value>
            <value>
                <fullName>Consult-Remote</fullName>
            </value>
            <value>
                <fullName>Resident Engineer</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>T&amp;E</fullName>
            </value>
            <value>
                <fullName>Non-Billable (Product)</fullName>
            </value>
            <value>
                <fullName>Non-Billable (PS)</fullName>
            </value>
            <value>
                <fullName>Non-Billable (Sales)</fullName>
            </value>
            <value>
                <fullName>Non-Billable (Expired)</fullName>
            </value>
            <value>
                <fullName>Resident Engineer-PD</fullName>
            </value>
            <value>
                <fullName>Install-PD</fullName>
            </value>
            <value>
                <fullName>Consult-Remote-PD</fullName>
            </value>
            <value>
                <fullName>Consult-Onsite-PD</fullName>
            </value>
            <value>
                <fullName>RCDM-Install</fullName>
            </value>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Rubrik University</fullName>
            </value>
            <value>
                <fullName>Non-Billable Admin</fullName>
            </value>
            <value>
                <fullName>Non-Billable CSAT</fullName>
            </value>
            <value>
                <fullName>Non-Billable PreSales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>