force-app/main/default/objects/PS_Task__c/fields/Task_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Unique_Id__c</fullName>
    <label>Task Unique Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>