force-app/main/default/objects/PS_Task__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <formula>IF(
    ISPICKVAL(Task_Type__c , &apos;T&amp;E&apos;),
    TEXT(Related_PS_Task__r.Task_Type__c) &amp; &apos; - T&amp;E&apos;,
    TEXT(Task_Type__c) &amp; 
        IF(
            NOT(ISBLANK(TEXT( Task_Subtype__c ))),
            &apos; &apos; &amp; TEXT( Task_Subtype__c ),
            &apos;&apos;
        )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task_Type</label>
    <type>Text</type>
</CustomField>