force-app/main/default/objects/PS_Task__c/fields/Test_Field_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_Hrs__c</fullName>
    <formula>IF((TODAY() - Task_Start_Date__c ) / ((Actual_End_date__c - Task_Start_Date__c )+1)&lt;0,0,TODAY() - Task_Start_Date__c ) / ((Actual_End_date__c - Task_Start_Date__c )+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Resident Engineer Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>