force-app/main/default/objects/PS_Task__c/fields/Total_Hours_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Delivered__c</fullName>
    <label>Total Hours Delivered</label>
    <summarizedField>PS_Time_Entry__c.Hours_Spent__c</summarizedField>
    <summaryForeignKey>PS_Time_Entry__c.PS_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>