force-app/main/default/objects/PS_Task__c/fields/Unique_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_External_ID__c</fullName>
    <description>To create parent-child relation using a single DML call</description>
    <externalId>true</externalId>
    <label>Unique External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>