force-app/main/default/objects/PS_Task__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <businessOwnerGroup>Data_Owner_PS_Team</businessOwnerGroup>
    <description>MKT24-747 - Added</description>
    <formula>Complete_till_25th__c - Completed_in_NS_stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>