force-app/main/default/objects/PS_Task__c/validationRules/Cannot_open_complete_task.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_open_complete_task</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Task_Status__c ),&quot;Completed&quot;),$User.Email != &apos;dylan.oconnor@rubrik.com&apos;, NOT(ISPICKVAL(Task_Status__c ,&quot;Completed&quot;)))</errorConditionFormula>
    <errorMessage>You can&apos;t modify the complete task.</errorMessage>
</ValidationRule>