force-app/main/default/objects/PS_Task__c/validationRules/Delivered_hours_expected_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivered_hours_expected_restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !CONTAINS( TEXT(Task_Type__c) , &quot;Resident Engineer&quot;) ,Billable_Hours_Expected__c &lt;  Billable_Hours_Actual__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Total hours delivered can&apos;t be more than purchased hours</errorMessage>
</ValidationRule>