force-app/main/default/objects/PS_Task__c/validationRules/Edit_of_Extended_End_Date_for_Task_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_of_Extended_End_Date_for_Task_Type</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Task_Type__c, &quot;Resident Engineer&quot;),(ISPICKVAL(Task_Type__c, &quot;Resident Engineer-PD&quot;))) &amp;&amp;
        ISCHANGED(Extended_End_date__c)</errorConditionFormula>
    <errorMessage>Extended End date can not be edited. Task Type is Resident Engineer/Resident Engineer-PD</errorMessage>
</ValidationRule>