force-app/main/default/objects/PS_Task__c/validationRules/Extended_end_date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Extended_end_date_Validation</fullName>
    <active>true</active>
    <description>Extended end date should be =&gt; task end date</description>
    <errorConditionFormula>AND(NOT(ISNULL(Extended_End_date__c)),Extended_End_date__c &lt;   Task_End_date__c)</errorConditionFormula>
    <errorDisplayField>Extended_End_date__c</errorDisplayField>
    <errorMessage>Extended end date should not be less than Task end date</errorMessage>
</ValidationRule>