force-app/main/default/objects/PS_Task__c/validationRules/Extended_end_date_Validation_user.validationRule-meta.xml
<ValidationRule>
    <fullName>Extended_end_date_Validation_user</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.Rubrik_Professional_Services_Consultants  &amp;&amp;
ISCHANGED(Extended_End_date__c)</errorConditionFormula>
    <errorDisplayField>Extended_End_date__c</errorDisplayField>
    <errorMessage>Operation not permitted. Please contact PMO to extend this task.</errorMessage>
</ValidationRule>