force-app/main/default/objects/PS_Task__c/validationRules/Extension_Reason_should_be_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Extension_Reason_should_be_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Extended_End_date__c)), ISBLANK(Extension_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Extension_Reason__c</errorDisplayField>
    <errorMessage>Extension reason is mandatory while adding extended end date</errorMessage>
</ValidationRule>