force-app/main/default/objects/PS_Task__c/validationRules/Provide_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Task_Type__c , &apos;Migration&apos;) &amp;&amp; ISPICKVAL(Task_Status__c , &apos;OPEN&apos;) &amp;&amp; Contact__c == null</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please provide a contact for Migration</errorMessage>
</ValidationRule>