force-app/main/default/objects/PS_Task__c/validationRules/selected_Order_Item_is_already_associate.validationRule-meta.xml
<ValidationRule>
    <fullName>selected_Order_Item_is_already_associate</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Order_Item__c) || ISNEW()) &amp;&amp; !ISBLANK(Order_Item__c) &amp;&amp; Order_Item__r.Has_PSTask__c &amp;&amp; !ISPICKVAL(Task_Type__c, &apos;Migration&apos;)</errorConditionFormula>
    <errorDisplayField>Order_Item__c</errorDisplayField>
    <errorMessage>selected Order Item is already associated with a PS Task</errorMessage>
</ValidationRule>