force-app/main/default/objects/PS_Task__c/validationRules/Task_EndDate_Cant_be_Less_Than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_EndDate_Cant_be_Less_Than_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Task_End_date__c)),Task_End_date__c &lt;Task_Start_Date__c )</errorConditionFormula>
    <errorDisplayField>Task_End_date__c</errorDisplayField>
    <errorMessage>Task end date should not be less than start date</errorMessage>
</ValidationRule>