force-app/main/default/objects/PS_Task__c/listViews/Migration_Task.listView-meta.xml
<ListView>
    <fullName>Migration_Task</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Order_Product__c</columns>
    <columns>Task_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Product__c</field>
        <operation>equals</operation>
        <value>RBK-DATA-MIGRATION</value>
    </filters>
    <label>Migration Task</label>
</ListView>